--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,4 @@ homepage="https://github.com/immortalinfidel/ema-rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ta-common = { path = "../ta-common", version = "0.1.0" }
+ta-common = { version = "0.1.0" }
